@@ -7,7 +7,7 @@
 //   be accessed as a rootProject as would be the normal convention.
 // - We redirect the build directory to be underneath the calling project's
 //   build directory.
-// - Any test dpenedencies are picked up from the test dependencies of the
+// - Any test dpenedencie/Users/schalkc/Projects/GradleTest/compatibility/compatibility.gradles are picked up from the test dependencies of the
 //   calling project.
 // - We need to run this project with the GradleTest jat that was created by
 //   the calling project
@@ -19,9 +19,16 @@
 //   the sanityCheck task will fail the build if need be.
 // ----------------------------------------------------------------------------
 
+
 buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
     dependencies {
         classpath fileTree("${projectDir}/../build/libs") { include "gradletest-${compatibilityVersion}.jar"}
+        classpath "org.ysb33r.gradle:gradle-cloudci-plugin:1.0"
     }
 }
 
@@ -33,12 +40,14 @@ repositories {
     }
 }
 
+
 // tag::applyplugin1[]
 apply plugin : 'org.ysb33r.gradletest'
 // end::applyplugin1[]
 
 
 apply plugin : 'java'
+apply plugin : 'org.ysb33r.cloudci'
 
 gradleTestGenerator {
     pluginJarDirectory = file("${projectDir}/../build/libs")
@@ -64,8 +73,8 @@ gradleTest {
 // end::applyplugin2[]
     dependsOn sanityCheck
 // tag::applyplugin2[]
-    versions '3.2', '3.1', '3.0'
-    versions '2.14'
+    versions '3.2.1', '3.1', '3.0'
+    versions '2.14.1'
     versions '2.13'
     versions '2.12' ,'2.11','2.10','2.9','2.8'
     versions '2.7','2.6','2.5'
@@ -74,8 +83,20 @@ gradleTest {
     beforeTest {
         println "  ${it.name}"
     }
+
 }
 // end::applyplugin2[]
+
+appveyor {
+    gradleTest {
+        if (JavaVersion.current().isJava7()) {
+            jvmArgs '-XX:+CMSClassUnloadingEnabled', '-XX:+CMSPermGenSweepingEnabled',
+                '-XX:+UseConcMarkSweepGC'
+        }
+
+        maxParallelForks = 4
+    }
+}
 
 
 test.enabled = false
